--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="Results" path="src"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-collections4-4.1.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-logging-1.2.jar"/>
@@ -63,5 +72,23 @@
 	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/cucumber-reporting-4.2.2.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/gherkin-2.12.2.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/bson-3.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/extentreports-3.1.5.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/jsoup-1.9.2.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/mongodb-driver-3.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/Cucumber/Extent Report- Customized HTML report/mongodb-driver-core-3.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/Selenium/Selenium_libraries/TestNG Jar/testng-6.14.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
