--- a/pom.xml
+++ b/pom.xml
@@ -230,11 +230,11 @@
  <!--
  https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind 
 -->
-<dependency>
+<!--<dependency>
 <groupId>com.fasterxml.jackson.core</groupId>
 <artifactId>jackson-databind</artifactId>
 <version>2.8.3</version>
-</dependency>
+</dependency>-->
  <!--
  https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit 
 -->
