--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 <dependency>
 <groupId>info.cukes</groupId>
 <artifactId>cucumber-java</artifactId>
-<version>RELEASE</version>
+<version>1.2.5</version>
 </dependency>
 <dependency>
 <groupId>info.cukes</groupId>
