--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.20</version>
 <configuration>
-<testSourceDirectory>./src/test/java/cucumberUtil</testSourceDirectory>
+<testSourceDirectory>./src/Practice</testSourceDirectory>
 <includes>
 <include>**/*Runner.java</include>
 </includes>
