--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,17 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-collections4-4.1.jar"/>
 	<classpathentry kind="lib" path="E:/Selenium/Framework1/PP_Automation/library/commons-logging-1.2.jar"/>
