--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.20</version>
 <configuration>
-<testSourceDirectory>./src/Practice</testSourceDirectory>
+<testSourceDirectory>./src/test</testSourceDirectory>
   <suiteXmlFiles>
                 <suiteXmlFile>testng.xml</suiteXmlFile>
   </suiteXmlFiles> 
