--- a/pom.xml
+++ b/pom.xml
@@ -278,12 +278,12 @@
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.20</version>
 <configuration>
-<testSourceDirectory>./src/test</testSourceDirectory>
+<testSourceDirectory>${project.build.testSourceDirectory}</testSourceDirectory>
   <suiteXmlFiles>
                 <suiteXmlFile>testng.xml</suiteXmlFile>
   </suiteXmlFiles> 
 <includes>
-<include>**/*.java</include>
+<include>**.java</include>
 </includes>
 </configuration>
 </plugin>
