--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 <artifactId>selenium-java</artifactId>
 <version>3.141.5</version>
 </dependency>
+
+<dependency>                
+           <groupId>org.testng</groupId>                                
+           <artifactId>testng</artifactId>                                
+           <version>6.9.9</version>                                                                          
+      </dependency>
+
  <!--  POI Dependencies START (Microsoft Word and Excel)  -->
 <dependency>
 <groupId>org.apache.poi</groupId>
@@ -278,9 +285,12 @@
 <artifactId>maven-surefire-plugin</artifactId>
 <version>2.20</version>
 <configuration>
-<testSourceDirectory>./src/Practice</testSourceDirectory>
+<testSourceDirectory>${project.build.testSourceDirectory}</testSourceDirectory>
+  <suiteXmlFiles>
+                <suiteXmlFile>tokenenrollment.xml</suiteXmlFile>
+  </suiteXmlFiles> 
 <includes>
-<include>**/*Runner.java</include>
+<include>**.java</include>
 </includes>
 </configuration>
 </plugin>
